# yart

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  arm-none-eabi-toolchain.cmake  install_cpputest.sh
include/: camera.h  canvas.h  color.h  console.h  intersection.h  lcd-dma.h  lcd-spi.h  material.h  matrix.h  plane.h  pointlight.h  ray.h  shape.h  sphere.h  transformation.h  tuple.h  world.h
include/lcd/: clock.h  sdram.h
include/patterns/: checkers.h  gradient.h  pattern.h  ring.h  stripe.h
lib/googletest/: CMakeLists.txt
src/: CMakeLists.txt  camera.cpp  canvas.cpp  intersection.cpp  lcd-dma.c  main.cpp  material.cpp  matrix.cpp  plane.cpp  pointlight.cpp  ray.cpp  sphere.cpp  transformation.cpp  tuple.cpp  world.cpp
src/lcd/: lcd-dma.c
src/patterns/: checkers.cpp  gradient.cpp  pattern.cpp  ring.cpp  stripe.cpp
src/shapes/: shape.cpp
tests/: CMakeLists.txt  CMakelists.txt  cameraTester.cpp  canvasTester.cpp  ch1.cpp  checkerTester.cpp  colorTester.cpp  gradientTester.cpp  intersectionTester.cpp  mainTester.cpp  materialTester.cpp  matrixTester.cpp  patternTester.cpp  planeTester.cpp  pointlightTester.cpp  rayTester.cpp  ringTester.cpp  shapeTester.cpp  sphereTester.cpp  stripeTester.cpp  transformationTester.cpp  tuple.cpp  tupleTester.cpp  worldTester.cpp
